k8s/noetl-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noetl-api
  namespace: noetl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noetl-api
  template:
    metadata:
      labels:
        app: noetl-api
    spec:
      containers:
      - name: noetl-api
        image: ghcr.io/noetl/noetl-api:latest
        ports:
        - containerPort: 8021
