k8s/noetl-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noetl-api
  namespace: noetl
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /noetl
        pathType: Prefix
        backend:
          service:
            name: noetl-api
            port:
              number: 80
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: noetl-api
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: noetl-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: noetl-api
            port:
              number: 80
